solving gh-pages refresh

--- a/src/components/ByDateTodosPage/ByDateTodosPage.scss
+++ b/src/components/ByDateTodosPage/ByDateTodosPage.scss
@@ -26,7 +26,7 @@ main.date-todos-page {
 
         position: relative;
         @media (max-width: 662px) {
-          color: white !important;
+          color: #fff0 !important;
           max-width: 1.5rem;
           max-height: 1.5rem;
           &::after {
